--- a/.gitignore
+++ b/.gitignore
@@ -23,10 +23,10 @@ profile.cov
 # Go workspace file
 go.work
 go.work.sum
-
+build
 # env file
 .env
 
 # Editor/IDE
-# .idea/
-# .vscode/
+.idea/
+.vscode/
